--- a/data/Lösungen/solC01L01.html
+++ b/data/Lösungen/solC01L01.html
@@ -18,16 +18,20 @@ Zeile 2:<br>
 Zeile 3:<br>
 Zeile 4:<br>
 Zeile 5:<br>
+Zeile 6:<br>
+Zeile 7:<br>
 </td>
 					<td><span class="firstLevel">public void code() {</span><br>
 <span class="secondLevel">//Unter dieser Zeile sollen deine Befehle stehen</span><br>
+<span class="secondLevel">schritt();</span><br>
+<span class="secondLevel">schritt();</span><br>
 <span class="secondLevel">schritt();</span><br>
 <span class="secondLevel">//Über dieser Zeile sollen deine Befehle stehen</span><br>
 <span class="firstLevel">}</span><br>
 </td>
 				</tr>
 			</table>
-			<p class="loc">Lines of Code (LoC): 3</p>
+			<p class="loc">Lines of Code (LoC): 5</p>
 			<p><a class="back" href="index.html">Zurück</a></p>
 		</div>
 	</body>
